objects/ssot__LearnerCampusSpacesActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Student Activity</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoginMethod__c</fullName>
        <label>Login Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039792236_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerCampusSpacesActivity_Academic_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>LearnerCampusSpacesActivity_Academic_rel</relationshipLabel>
        <relationshipName>rel_1731039792236_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040464185_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerCampusSpacesActivity_Individu_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>LearnerCampusSpacesActivity_Individu_rel</relationshipLabel>
        <relationshipName>rel_1731040464185_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040475137_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerCampusSpacesActivity_Location_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>LearnerCampusSpacesActivity_Location_rel</relationshipLabel>
        <relationshipName>rel_1731040475137_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>